// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Standard template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer>
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`2. Standard template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer>
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
      <Separator />
      <ChildContainer>
        <ExampleChild
          id="standard-2"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`3. Standard template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer>
        <ExampleChild
          id="standard-1"
        />
      </ChildContainer>
      <Separator />
      <ChildContainer>
        <ExampleChild
          id="standard-2"
        />
      </ChildContainer>
      <Separator />
      <ChildContainer>
        <ExampleChild
          id="standard-3"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`4. Lead and two template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadContainer>
        <ExampleChild
          id="lead"
        />
      </LeadContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`5. Lead and two template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadContainer>
        <ExampleChild
          id="lead"
        />
      </LeadContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`6. Lead and two template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadContainer>
        <ExampleChild
          id="lead"
        />
      </LeadContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
        <SupportContainer>
          <ExampleChild
            id="support-2"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`7. Opinion and two template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <OpinionContainer>
        <ExampleChild
          id="opinion"
        />
      </OpinionContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`8. Opinion and two template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <OpinionContainer>
        <ExampleChild
          id="opinion"
        />
      </OpinionContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`9. Opinion and two template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <OpinionContainer>
        <ExampleChild
          id="opinion"
        />
      </OpinionContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer>
          <ExampleChild
            id="support-1"
          />
        </SupportContainer>
        <SupportContainer>
          <ExampleChild
            id="support-2"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`10. Standard tracking roles 1`] = `
Array [
  "standard-1",
  "standard-2",
  "standard-3",
]
`;

exports[`11. Lead and two tracking roles 1`] = `
Array [
  "lead-and-two",
  "lead-and-two-supporting-1",
  "lead-and-two-supporting-2",
]
`;

exports[`12. Opinion and two tracking roles 1`] = `
Array [
  "opinion-and-two",
  "opinion-and-two-supporting-1",
  "opinion-and-two-supporting-2",
]
`;
